fix: css for dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 :root {
   --primary-color: #f50057;
+  --toastify-text-color-light: #000;
 }
 
 * {
